fix: list spacing at bottom was wrong on mobile

--- a/styles.css
+++ b/styles.css
@@ -291,6 +291,9 @@
             padding-top: 0;
         }
     }
+}
+
+.note-toolbar-setting-toolbar-list {
     &:has(:last-child) {
         .is-mobile & {
             padding-bottom: 0;
